<resources>
    <string name="app_name">Awareness Now</string>
    <string name="defaultRem">I am Aware !</string>

    <string name="menu_info">Info</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_edit">Edit Reminders</string>
    <string name="menu_demo">Demo</string>

    <string name="nxtremtoast">Next reminder in&#160;</string>
    <string name="nxtremmintoast">&#160;minutes</string>
    <string name="emptyRem">Be Aware!</string>
    <string name="editRemTitle">Add/Edit Reminders</string>
    <string name="hintRem">Add a new reminder</string>
    <string name="editCancel">Cancel</string>
    <string name="editApply">Apply</string>
    <string name="editAdd">Add New</string>

    <string-array name="rems">
        <item>Be Aware!</item>
        <item>Awareness is the key</item>
        <item>I am Aware</item>
        <item>Are you aware now?</item>
        <item>I am aware of my thoughts</item>
        <item>I am aware of my actions</item>
        <item>I am aware of my surroundings</item>
        <item>I am aware of people around me</item>
        <item>I am the witness</item>
        <item>I am the experiencer</item>
        <item>I am Pure Consciousness</item>
        <item>I am conscious</item>
        <item>I watch my mind</item>
        <item>I witness the world and the mind</item>
        <item>I am present</item>
        <item>Awareness is, here and now</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Reminder Schedule</string>

    <string name="pref_title_social_recommendations">Turn off at night</string>
    <string name="pref_description_social_recommendations">Night hours : 22:00 to 06:00</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Frequency</string>
    <string-array name="pref_example_list_titles">
        <item>Every 10 minutes</item>
        <item>Every 20 minutes</item>
        <item>Every 30 minutes</item>
        <item>Every 45 minutes</item>
        <item>Every hour</item>
        <item>Every 3 hours</item>
        <item>Twice a day</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
    </string-array>

    <string name="pref_title_rand">Randomness</string>
    <string-array name="pref_rand_list">
        <item>None</item>
        <item>0-10 minutes</item>
        <item>0-20 minutes</item>
        <item>0-1 hour</item>
        <item>0-3 hours</item>
    </string-array>
    <string-array name="pref_rand_list_values">
        <item>0</item>
        <item>10</item>
        <item>20</item>
        <item>60</item>
        <item>180</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Alerts</string>

    <string name="pref_title_new_message_notifications">Sound Alert</string>

    <string name="pref_title_ringtone">Tone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_speak">Speak Aloud</string>
    <string name="editReset">Reset to default</string>
    <string name="editWarn">(Press Apply, all changes will be lost!)</string>

</resources>
