<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/menu_info"
        android:id="@+id/menuInfo"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:title="@string/menu_share"
        android:id="@+id/menuShare"
        app:showAsAction="never"
        app:actionProviderClass=
            "android.support.v7.widget.ShareActionProvider" />
    <item
        android:title="@string/menu_settings"
        android:id="@+id/menuSettings"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:title="@string/menu_edit"
        android:id="@+id/menuEdit"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:title="@string/menu_demo"
        android:id="@+id/menuDemo"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>

